# adn-distribuido

./: .env.example  .gitignore  README.md  TEAM_DEMO_GUIDE.md  TEAM_INSTRUCTIONS.md  pyproject.toml  requirements.txt
data_smoke/input/: a.fna  b.fna
data_smoke/output/: result_smoke_job.fna
data_smoke/state/: cluster_state.json
data_smoke/work/smoke_job/: smoke_job_0.res
scripts/: smoke_test_local.sh
src/dna_cluster/: __init__.py  config.py  logging_setup.py
src/dna_cluster/api/: leader_api.py  node_agent.py  schemas.py
src/dna_cluster/cli/: compare_local.py  preprocess.py  run_manager.py  run_node.py
src/dna_cluster/models/: chunk.py  cluster.py  job.py  node.py
src/dna_cluster/processing/: assemble_output.py  chunking.py  compare_cpu.py  compare_gpu.py  compression.py  fasta_preprocess.py  hashing.py  layout.py
src/dna_cluster/services/: heartbeat.py  leader_runtime.py  node_runtime.py  registration.py
src/dna_cluster/storage/: cache.py  paths.py  state_store.py
src/dna_cluster/utils/: checksums.py  ids.py  time.py
tests/: test_assemble_output.py  test_chunking.py  test_compare_cpu.py  test_hashing.py  test_preprocess.py  test_scheduling.py
