[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dna_cluster"
version = "0.1.0"
description = "Distributed hybrid CPU+GPU DNA comparison cluster"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
    "aiofiles==23.2.1"
]

[tool.setuptools.packages.find]
where = ["src"]
